syntax = "proto3";

message Vec3Proto {
  float x = 1;
  float y = 2;
  float z = 3;
}

message EntityProto {
  string id = 1;
  optional Vec3Proto position = 2;
  optional float angle = 3;
}

message EntitiesProto {
  repeated EntityProto entities = 1;
  }

message GameStateProto{
    optional EntitiesProto playerControlledEntities = 1;
    optional EntitiesProto mobileEntities = 2;
    optional EntitiesProto staticEntities = 3;
  }
